--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -60,8 +60,8 @@ h3{
 {
 
     background-size:cover;
-    width:200px;
-    /*height: 100vh; !* set the height of the header to fill the viewport *!*/
+    width:100%;
+    height: 100%;
 
 
 }
